--- a/1.html
+++ b/1.html
@@ -1,12 +1,12 @@
-<!DOCTYPE:HTML>
+<!DOCTYPE html>
 <html>
 <body>
 
-<h1>My first SVG</h1>
+<h1>Test Plot.</h1>
 
 <svg width="800" height="800">
 	<circle cx="350" cy="350" r="300" stroke="green" stroke-width="4" fill=rgba(0,0,0,0) />
-	<text x="0" y="15" fill="red">I love SVG!</text>
+	
 
 </svg>
 
