--- a/1.html
+++ b/1.html
@@ -2,11 +2,10 @@
 <html>
 <body>
 
-<h1>Test Plot.</h1>
+<script>
+	var svgctrl = d3.select("body").append("svg").attr("width",500).attr("height",500);
+</script>
 
-<svg width="800" height="800">
-	<circle cx="350" cy="350" r="300" stroke="green" stroke-width="4" fill=rgba(0,0,0,0) />
-</svg>
 
 </body>
 </html>
