--- a/helen.html
+++ b/helen.html
@@ -19,7 +19,7 @@ d3.csv("./total.csv",
 		var miny = d3.min(data, function(d){ return d.people; });
 		console.log(maxy);
 		console.log(miny);
-		var lines = d3.line().x(function(d,i){return (ln-i)*(width/ln);}).y(function(d){return height-(d.people-miny)*(height/(maxy-miny))});
+		var lines = d3.line().x(function(d,i){return (ln-i)*(width/ln);}).y(function(d){return height-(d.people-miny)*(height/(400-miny))});
 		ctrl.append("path").data([data]).attr("d", lines).attr("stroke", "red").attr("fill", "none");
 	}
 );
