--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <!-- Load c3.css -->
-  <link href="c3.css" rel="stylesheet" type="text/css">
+  <link href="../c3.css" rel="stylesheet" type="text/css">
   <!-- Load d3.js and c3.js -->
   <script src="https://d3js.org/d3.v3.min.js"></script>
-  <script src="c3.min.js"></script>
+  <script src="../c3.min.js"></script>
   <title>Document</title>
 </head>
 
@@ -14,10 +14,19 @@
 <div id="chart"></div>
 </body>
 <script type="text/javascript">
+
 var chart = c3.generate({
     data: {
-        url: 'c3_test.csv',
+        url: '../Data/Events-Day.csv',
         type: "line"
+    },
+    axis: {
+        x: {
+            type: 'timeseries',
+            tick: {
+                format: '%Y-%m-%d'
+            }
+        }
     }
 });
 
