--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -21,7 +21,7 @@ var chart = c3.generate({
         type: "line"
     },
     axis: {
-        x: {
+        Day: {
             type: 'timeseries',
             tick: {
                 format: '%Y-%m-%d'
