--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -18,7 +18,7 @@
 var chart = c3.generate({
     data: {
         x:'Date',
-        xFormat: '%Y-%m-%d',
+        xFormat: '%Y%m%d',
         url: '../Data/Events-Day.csv'
     },
     axis: {
