--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -20,9 +20,9 @@ var chart = c3.generate({
       
         x: 'Day',
         xFormat: '%Y%m%d',
-        url: '../Data/Events-Day.csv'
-
-    },
+        url: '../Data/Events-Day.csv',
+        type: 'bar'
+      },
     axis: {
         x: {
             type: 'timeseries',
