--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -20,13 +20,15 @@ var chart = c3.generate({
         x: 'Day',
         xFormat: '%Y%m%d',
         url: '../Data/Events-Day.csv',
-        type: 'bar'
+        types:{ 
+          Events: 'bar',
       },
+    },
     bar: {
         width: {
             ratio: 0.5
         }
-      },
+    },
     axis: {
         x: {
             type: 'timeseries',
@@ -35,6 +37,10 @@ var chart = c3.generate({
             }
         }
     }
+});
+
+chart.load({
+
 });
 
 </script>
