--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -34,8 +34,7 @@ var chart = c3.generate({
             type: 'timeseries',
             tick: {
                 format: '%Y-%m-%d',
-                rotate: 75,
-                multiline: false
+                rotate: 75
             }
         }
     },
