--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -24,11 +24,11 @@ var chart = c3.generate({
           Events: 'bar',
         },
     },
-    // bar: {
-    //     width: {
-    //         ratio: 0.9
-    //     }
-    // },
+    bar: {
+        width: {
+            ratio: 0.5
+        }
+    },
     axis: {
         x: {
             type: 'timeseries',
