--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -20,9 +20,9 @@ var chart = c3.generate({
         x: 'Day',
         xFormat: '%Y%m%d',
         url: '../Data/Events-Day.csv',
-        types:{ 
-          Events: 'bar',
-        },
+        // types:{ 
+        //   Events: 'bar',
+        // },
     },
     // bar: {
     //     width: {
