--- a/Script/Events-Year.html
+++ b/Script/Events-Year.html
@@ -17,7 +17,7 @@
 
 var chart = c3.generate({
     data: {
-        x: 'Month',
+        x: 'Year',
         xFormat: '%Y',
         url: '../Data/Events-Year.csv',
         // types:{ 
