--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -34,6 +34,7 @@ var chart = c3.generate({
             type: 'timeseries',
             tick: {
                 format: '%Y-%m-%d',
+                count: 5,
                 rotate: 75
             }
         }
