--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -17,9 +17,17 @@
 
 var chart = c3.generate({
     data: {
-        x: 'Day',
-        xFormat: '%Y%m%d',
-        url: '../Data/Events-Day.csv',
+        // x: 'Day',
+        // xFormat: '%Y%m%d',
+        // url: '../Data/Events-Day.csv',
+        
+        x: 'x',
+        // type: 'bar',
+        columns: [
+            ['x', '2016-01-05', '2016-01-06', '2016-01-10'],
+            ['Events', 50, 56, 75],
+        ],
+
         types:{ 
           Events: 'bar',
         },
@@ -34,7 +42,7 @@ var chart = c3.generate({
             type: 'timeseries',
             tick: {
                 format: '%Y-%m-%d',
-                count: 50,
+                // count: 50,
                 rotate: 75
             }
         }
