--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -47,14 +47,11 @@ var chart = c3.generate({
             }
         }
     },
-    // zoom: {
-    //     enabled: true
+    zoom: {
+        enabled: true
     }
 });
 
-chart.load({
-
-});
 
 </script>
 </html>
