--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -21,10 +21,10 @@ var chart = c3.generate({
         // xFormat: '%Y%m%d',
         // url: '../Data/Events-Day.csv',
         
-        x: 'x',
+        x: 'Day',
         // type: 'bar',
         columns: [
-            ['x', '2016-01-05', '2016-01-06', '2016-01-10'],
+            ['Day', '2016-01-05', '2016-01-06', '2016-01-10'],
             ['Events', 50, 56, 75],
         ],
 
