--- a/Script/Events-Year.html
+++ b/Script/Events-Year.html
@@ -5,7 +5,7 @@
   <!-- Load c3.css -->
   <link href="../c3.css" rel="stylesheet" type="text/css">
   <!-- Load d3.js and c3.js -->
-  <script src="https://d3js.org/d3.v3.min.js"></script>
+  <script src="https://d3js.org/d3.v3.js"></script>
   <script src="../c3.min.js"></script>
   <title>Document</title>
 </head>
@@ -17,23 +17,25 @@
 
 var chart = c3.generate({
     data: {
-        x: 'Year',
-        xFormat: '%Y',
-        url: '../Data/Events-Year.csv',
-        // types:{ 
-        //   Events: 'bar',
-        // },
+         x: 'Year',
+         xFormat: '%Y',
+         url: '../Data/Events-Year.csv',
+        
+        types:{ 
+          Events: 'bar',
+        },
     },
-    // bar: {
-    //     width: {
-    //         ratio: 0.5
-    //     }
-    // },
+     bar: {
+         width: {
+             ratio: 0.1
+         }
+     },
     axis: {
         x: {
             type: 'timeseries',
             tick: {
                 format: '%Y',
+                count: 20,
                 rotate: 75
             }
         }
@@ -41,10 +43,6 @@ var chart = c3.generate({
     zoom: {
         enabled: true
     }
-});
-
-chart.load({
-
 });
 
 </script>
