--- a/Script/Events-Month.html
+++ b/Script/Events-Month.html
@@ -6,7 +6,7 @@
   <link href="../c3.css" rel="stylesheet" type="text/css">
   <!-- Load d3.js and c3.js -->
   <script src="https://d3js.org/d3.v3.js"></script>
-  <script src="../c3.min.js"></script>
+  <script src="../c3.js"></script>
   <title>Document</title>
 </head>
 
