--- a/Script/Events-Country(Bar).html
+++ b/Script/Events-Country(Bar).html
@@ -32,7 +32,10 @@ var chart = c3.generate({
     axis: {
         x: {
             type: 'category',
-        }
+            rotate: 75,
+            multiline: false,
+        },
+        heigth: 130,
     },
     color: {
         pattern: ['#1f77b4']
