--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -39,7 +39,7 @@ var chart = c3.generate({
                 count: 100,
                 rotate: 75,     
                 culling: {
-                    min: 20 // the number of tick texts will be adjusted to less than this value
+                    min: 40
                 },
             }
         }
