--- a/Script/Events-Day.html
+++ b/Script/Events-Day.html
@@ -38,9 +38,7 @@ var chart = c3.generate({
                 format: '%Y-%m-%d',
                 count: 100,
                 rotate: 75,     
-                culling: {
-                    min: 40
-                },
+                multiline: false,
             }
         }
     },
