--- a/Script/Events-Country(Bar).html
+++ b/Script/Events-Country(Bar).html
@@ -39,7 +39,11 @@ var chart = c3.generate({
     },
     color: {
         pattern: ['#1f77b4']
+    },
+    zoom:{
+      enabled: true
     }
+
 });
 
 </script>
