--- a/Script/Events-Continent(Bar).html
+++ b/Script/Events-Continent(Bar).html
@@ -18,7 +18,7 @@
 var chart = c3.generate({
     data: {
          x: 'Country',
-         url: '../Data/Events-Country(Bar).csv',
+         url: '../Data/Events-Continent(Bar).csv',
         
         types:{ 
           Events: 'bar',
