--- a/Script/Events-Country(Pie).html
+++ b/Script/Events-Country(Pie).html
@@ -18,7 +18,7 @@
 
 var chart = c3.generate({
     data: {
-        url: '../Data/Events-Country.csv',
+        url: '../Data/Events-Country(Pie).csv',
         type : 'pie',
     }
 });
