--- a/Script/Events-Continent(Bar).html
+++ b/Script/Events-Continent(Bar).html
@@ -17,7 +17,7 @@
 
 var chart = c3.generate({
     data: {
-         x: 'Country',
+         x: 'Continent',
          url: '../Data/Events-Continent(Bar).csv',
         
         types:{ 
