--- a/Script/Events-Continent(Pie).html
+++ b/Script/Events-Continent(Pie).html
@@ -20,6 +20,9 @@ var chart = c3.generate({
     data: {
         url: '../Data/Events-Continent(Pie).csv',
         type : 'pie',
+    },
+    legend: {
+        position: 'right'
     }
 });
 
