Events-Continent-Country(v2)

--- a/Script/Events-Continent(Pie).html
+++ b/Script/Events-Continent(Pie).html
@@ -47,56 +47,56 @@ var chart = c3.generate({
 $('#World').on('click', function () {
     chart.load({
       url: '../Data/Events-Continent/Events-Continent.csv',
-        unload: chart.columns,
+        unload: chart.url,
     });
 });
 
 $('#Asia').on('click', function () {
     chart.load({
       url: '../Data/Events-Continent/Events-Asia.csv',
-        unload: chart.columns,
+        unload: chart.url,
     });
 });
 
 $('#Africa').on('click', function () {
     chart.load({
       url: '../Data/Events-Continent/Events-Africa.csv',
-        unload: chart.columns,
+        unload: chart.url,
     });
 });
 
 $('#Europe').on('click', function () {
     chart.load({
       url: '../Data/Events-Continent/Events-Europe.csv',
-        unload: chart.columns,
+        unload: chart.url,
     });
 });
 
 $('#Oceania').on('click', function () {
     chart.load({
       url: '../Data/Events-Continent/Events-Oceania.csv',
-        unload: chart.columns,
+        unload: chart.url,
     });
 });
 
 $('#NAmercia').on('click', function () {
     chart.load({
       url: '../Data/Events-Continent/Events-NAmerica.csv',
-        unload: chart.columns,
+        unload: chart.url,
     });
 });
 
 $('#SAmerica').on('click', function () {
     chart.load({
       url: '../Data/Events-Continent/Events-SAmerica.csv',
-        unload: chart.columns,
+        unload: chart.url,
     });
 });
 
 $('#Antarctica').on('click', function () {
     chart.load({
       url: '../Data/Events-Continent/Events-Antarctica.csv',
-        unload: chart.columns,
+        unload: chart.url,
     });
 });
 
