--- a/Script/Events-Continent(Pie).html
+++ b/Script/Events-Continent(Pie).html
@@ -7,6 +7,7 @@
   <!-- Load d3.js and c3.js -->
   <script src="https://d3js.org/d3.v3.js"></script>
   <script src="../c3.js"></script>
+  <script src="../jquery-3.1.1.js"></script>
   <title>Document</title>
 </head>
 
