Events-Continent-Country(v5)

--- a/Script/Events-Continent-Country.html
+++ b/Script/Events-Continent-Country.html
@@ -25,9 +25,9 @@
 
 <select id="style">
     <option>-- Choose Chart--</option>
-    <option>bar</option>
-    <option>pie</option>
-    <option>donut</option>
+    <option value='bar'>Bar Chart</option>
+    <option value='pie' defaultSelected=true>Pie Chart</option>
+    <option value='donut'>Donut Chart</option>
 </select>
 <br />
 
