Events-Continent-Country(v7)

--- a/Script/Events-Continent-Country.html
+++ b/Script/Events-Continent-Country.html
@@ -45,7 +45,7 @@ $(document).ready(function () {
         var chart = c3.generate({
     bindto: '#chart',
     data: {
-        url: '../Data/Events-Continent/'+ar+'.csv',
+        url: '../Data/Events-Continent/Events-'+ar+'.csv',
         type : cs,
     },
     pie: {
