--- a/Script/Events-Continent-Country.html
+++ b/Script/Events-Continent-Country.html
@@ -41,11 +41,12 @@ $(document).ready(function () {
     $("#style","#area").change(function () {
         var cs = $("#style").find('option:selected').val();
         var ar = $("#area").find('option:selected').val();
-        
+        var rd = '../Data/Events-Continent/Events-'+ar+'.csv'
+
         var chart = c3.generate({
     bindto: '#chart',
     data: {
-        url: '../Data/Events-Continent/Events-'+ar+'.csv',
+        url: rd,
         type : cs,
     },
     pie: {
