--- a/Script/Events-Continent-Country.html
+++ b/Script/Events-Continent-Country.html
@@ -41,7 +41,7 @@ $(document).ready(function () {
     $("#style","#area").change(function () {
         var cs = $("#style").find('option:selected').val();
         var ar = $("#area").find('option:selected').val();
-        var rd = "../Data/Events-Continent/Events-"+ar+".csv"
+        var rd = "../Data/Events-Continent/Events-"+"Continent"+".csv"
 console.log(rd)
         var chart = c3.generate({
     bindto: '#chart',
