--- a/Script/Events-Continent-Country.html
+++ b/Script/Events-Continent-Country.html
@@ -51,7 +51,7 @@ $(document).ready(function () {
         
         var chart = c3.generate({
             data: {
-                url: rd,
+                url: "../Data/Events-Continent/Events-Asia.csv",
                 type : cs,
             },
             pie: {
