--- a/Script/Events-Continent-Country.html
+++ b/Script/Events-Continent-Country.html
@@ -16,6 +16,7 @@
 <br/>
 
 <select id="area">
+    <option>-- Choose Area--</option>
     <option value='Continent'>World</option>
     <option>Asia</option>
     <option>Africa</option>
@@ -29,6 +30,7 @@
 <br />
 
 <select id="style">
+    <option>-- Choose Chart--</option>
     <option value='bar'>Bar Chart</option>
     <option value='pie'>Pie Chart</option>
     <option value='donut'>Donut Chart</option>
@@ -47,14 +49,16 @@ $(document).ready(function () {
 
         var cs = $("#style").find('option:selected').val();
         var ar = $("#area").find('option:selected').val();
-        var rd = "../Data/Events-Continent/Events-"+ar+".csv";
+        var rd = "../Data/Events-Continent/"+cs+"/Events-"+ar+".csv";
         console.log(rd);
         
         var chart = c3.generate({
             bindto: '#chart',
             data: {
                 url: rd,
-                type : cs,
+                type: cs,
+                x: 'Country',
+                hide: 'Country',
             },
             pie: {
                 label: {
@@ -64,7 +68,8 @@ $(document).ready(function () {
                 }
             }, 
             legend: {
-                position: 'right'
+                position: 'right',
+                hide: 'Country',
             }
         });
     });
