Events-Continent-Country(v22)

--- a/Script/Events-Continent-Country.html
+++ b/Script/Events-Continent-Country.html
@@ -41,8 +41,8 @@
 </body>
 
 <script type="text/javascript">
-var cs = bar;
-var ar = Continent;
+var cs = 'bar';
+var ar = 'Continent';
 
 $(document).ready(function () {
     $("#style,#area").change(function () {
