--- a/Script/Latitude-Longitude.html
+++ b/Script/Latitude-Longitude.html
@@ -27,9 +27,13 @@ var chart = c3.generate({
               tick: {
                   fit: false
               },
+              min: -180,
+              max: 180,
             },
             y: {
               label: 'Latitude',
+              min: -90,
+              max: 90,
            }
         }
 });
