--- a/Script/Latitude-Longitude.html
+++ b/Script/Latitude-Longitude.html
@@ -36,7 +36,7 @@ var chart = c3.generate({
               max: 90,
               center: 0,
               tick: {
-                value: [-90,-60,-30,0,30,60,90]
+                values: [-90,-60,-30,0,30,60,90]
               },
            }
         }
