--- a/Script/timeplot/bar_year.html
+++ b/Script/timeplot/bar_year.html
@@ -6,8 +6,8 @@
   <!-- Load c3.css -->
   <link href="../../c3.css" rel="stylesheet" type="text/css">
   <!-- Load d3.js and c3.js -->
-  <script src="https://d3js.org/d3.v3.min.js"></script>
-  <script src="../../c3.min.js"></script>
+  <script src="https://d3js.org/d3.v3.js"></script>
+  <script src="../../c3.js"></script>
   <title>Document</title>
 </head>
 
